--- a/Lab2/CSS/style.css
+++ b/Lab2/CSS/style.css
@@ -39,7 +39,7 @@ body {
 }
 
 h1 {
-    font-size: 48px;
+    font-size: 3vw;
 }
 
 .header_left {
@@ -83,7 +83,7 @@ h1 {
 }
 
 p {
-    font-size: 36px;
+    font-size: 2.5vmax;
 }
 
 h2 {
