--- a/Lab2/CSS/style.css
+++ b/Lab2/CSS/style.css
@@ -6,6 +6,16 @@ body {
     font-size: 16px;
 }
 
+html {
+    overflow: scroll;
+    overflow-x: hidden;
+}
+::-webkit-scrollbar {
+    width: 0px;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
+
 
 .item {
     display: flex;
@@ -39,12 +49,14 @@ body {
 }
 
 h1 {
-    font-size: 3vw;
+    font-size: 3.7vw;
 }
 
 .header_left {
 	font-style: italic;
-    margin-right: 50vw;
+  margin-right: 50vw;
+  grid-row: 1/2;
+  grid-column: 1/2;
 
 }
 
@@ -64,7 +76,8 @@ h1 {
     /* grid column start column 1 and column 2 end */
     grid-column: 1 / 2;
     display:grid;
-    padding-left: 4vw;
+    justify-content: left;
+    padding: 5vw;
 
 }
 
@@ -83,19 +96,23 @@ h1 {
 }
 
 p {
-    font-size: 2.5vmax;
+    font-size: 2.5vh;
 }
 
 h2 {
-    font-size: 3.5vmax;
+    font-size: 3.7vmax;
     padding-bottom: 1vh;
 }
 
 
 h3 {
-    font-size: 2.7vmax;
+    font-size: 3.4vmax;
     padding-bottom: 0.5vmax;
     font-weight: 500;
+}
+
+a {
+  font-size: 2vh;
 }
 
 
@@ -136,8 +153,15 @@ h3 {
 
 
 .footer_left {
+  /* margin-right: 45vw; */
+  padding-left: 5vw;
+  justify-content: left;
 	display:grid;
 
+}
+
+li {
+  font-size: 2.5vh;
 }
 
 
