--- a/Lab2/CSS/style.css
+++ b/Lab2/CSS/style.css
@@ -54,7 +54,7 @@ h1 {
 
 .header_left {
   font-style: italic;
-  justify-content: left; 
+  justify-content: left;
   padding-left: 2vw;
   grid-row: 1/2;
   grid-column: 1/2;
@@ -150,5 +150,7 @@ a {
 }
 
 .footer_right {
+  justify-content: right;
+  padding-right: 5vw;
   display: grid;
 }
